@@ -1,3 +1,8 @@
+2007-10-25  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-security/ws-wpa-psk.c
+		- (ws_wpa_psk_new): hide Type combo as it's not being used yet
+
 2007-10-24  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dbus-settings.c
